[gd_scene load_steps=4 format=3 uid="uid://djj8lftj7w8hq"]

[ext_resource type="Script" uid="uid://bh7jjovu0jc58" path="res://feature/inventory_location/internal/location_panel.gd" id="1_f25e6"]
[ext_resource type="PackedScene" uid="uid://fabysmmsww7k" path="res://feature/inventory_location/internal/search_display.tscn" id="3_fp44n"]
[ext_resource type="Script" uid="uid://bk3rwk2fcwbwa" path="res://feature/audio/SFX/UI_SFX/ButtonSound.gd" id="3_loygy"]

[node name="LocationPanel" type="MarginContainer"]
custom_minimum_size = Vector2(40, 40)
offset_right = 538.0
offset_bottom = 719.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2
script = ExtResource("1_f25e6")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Item Name"
vertical_alignment = 1
autowrap_mode = 3
mouse_filter = 2

[node name="CloseSpace" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 1

[node name="DiscriptionLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SearchDisplay" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_fp44n")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Search" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Search"
script = ExtResource("3_loygy")
metadata/_custom_type_script = "uid://bk3rwk2fcwbwa"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/Search" to="." method="_on_search_pressed"]
